--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,24 +1,12 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>Ola's blog</title>
-</head>
-<body>
-  <div>
-      <h1><a href="/">Django Girls Blog</a></h1>
-  </div>
-
-  <div>
-      <p>published: 14.06.2014, 12:14</p>
-      <h2><a href="">My first post</a></h2>
-      <p>Aenean eu leo quam. こんにちは！ よろしくお願いします！ </p>
-  </div>
-
-  <div>
-      <p>公開日: 2014/06/14, 12:14</p>
-      <h2><a href="">2番目の投稿</a></h2>
-      <p> こんにちは！ よろしくお願いします！ </p>
-  </div>
-</body>
-</html>
+{% extends 'blog/base.html' %}
+{% block content %}
+{% for post in posts %}
+    <div class="post">
+        <div class="date">
+            {{ post.published_date }}
+        </div>
+        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+        {% comment %} <p>{{ post.text|linebreaksbr }}</p> {% endcomment %}
+    </div>
+{% endfor %}
+{% endblock %}
